sumo/tests/duarouter/trips/errors/vehicle_empty_departlane/errors.duarouter
Error: Attribute 'departlane' in definition of a tripdef is empty.
Error: Invalid departlane definition for vehicle ''
Quitting (on error).
